.provarCaches/00D6C0000000xA6UAI/objects/sked__Availability_Template__c.object
<CustomObject>
    <fields>
        <fullName>sked__Availability_Pattern__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Availability Pattern</label>
        <referenceTo>sked__Availability_Pattern__c</referenceTo>
        <relationshipLabel>Availability Templates</relationshipLabel>
        <relationshipName>Availability_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Finish__c</fullName>
        <label>Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked__Global__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this availability template will apply to all users</inlineHelpText>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>Availability Template</label>
    <nameField>
        <label>Availability Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>